plugins {
	id 'java'
	id 'java-library'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

var commonProject = project(commonModule)
var jpaCoreProject = project(jpaCoreModule)

allprojects {
	apply plugin:'java'
	apply plugin:'java-library'
	apply plugin:'org.springframework.boot'
	apply plugin:'io.spring.dependency-management'

	group = 'com.novel'
	version = '0.0.1-SNAPSHOT'

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17

	// Enable Java Preview (1)
	compileJava {
		options.compilerArgs += [
				'--enable-preview',
				'-Amapstruct.defaultComponentModel=spring'
		]

	}

	// Enable Java Preview (2)
	compileTestJava {
		options.compilerArgs += [
				'--enable-preview',
//                '-Amapstruct.defaultComponentModel=spring'
		]
	}

	// Enable Java Preview (3)
	test {
		useJUnitPlatform()
		jvmArgs([
				'--enable-preview',
//                '-Amapstruct.defaultComponentModel=spring'
				'-Dspring.profiles.active=local'
		])
	}

	repositories {
		mavenCentral()
	}

	test {
		useJUnitPlatform()
	}
}

subprojects {
	dependencies {
		implementation 'org.springframework:spring-web'
		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'com.fasterxml.jackson.core:jackson-annotations'
		developmentOnly 'org.springframework.boot:spring-boot-devtools'
		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'


		// Lombok
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		// Logging
		implementation 'org.apache.logging.log4j:log4j-api'
		implementation 'org.apache.logging.log4j:log4j-core'

		// Pageable
		implementation 'org.springframework.data:spring-data-commons'
	}
}

project(commonModule) {
	dependencies {
		// NTP
		implementation 'commons-net:commons-net:3.9.0'
	}
}

project(jpaCoreModule) {
	dependencies {
		implementation commonProject
		api 'org.springframework.boot:spring-boot-starter-data-jpa'
	}
}

project(globalExceptionHandlerModule) {
	dependencies {
		implementation commonProject
	}
}

// ====================================================================== member-service
project(memberServiceModule) {
	dependencies {
		implementation commonProject
		api project(memberApplicationModule)
		api project(memberRdbAdapterModule)
		api project(memberInternalApiModule)

		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-data-redis'

		// GSON
		testImplementation 'com.google.code.gson:gson:2.10.1'
	}

	bootJar {
		enabled = true
	}
}

project(memberDomainModule) {
	dependencies {
		implementation commonProject
	}
}

project(memberApplicationModule) {
	dependencies {
		implementation commonProject
		api project(memberDomainModule)
		api project(memberReadModelsModule)

		implementation 'org.springframework.security:spring-security-crypto'
		// GSON
		implementation 'com.google.code.gson:gson:2.10.1'
		// AOP
		implementation 'org.springframework.boot:spring-boot-starter-aop'
	}
}

project(memberRdbAdapterModule) {
	dependencies {
		implementation commonProject
		implementation jpaCoreProject
		implementation project(memberApplicationModule)
		// Map Struct
		implementation 'org.mapstruct:mapstruct:1.5.3.Final'
		annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
		// MySQL
		runtimeOnly 'com.mysql:mysql-connector-j'
		// Flyway
		implementation 'org.flywaydb:flyway-mysql'
	}
}

project(memberInternalApiModule) {
	dependencies {
		implementation commonProject
		implementation project(memberApplicationModule)

		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-validation'

		// Map Struct
		implementation 'org.mapstruct:mapstruct:1.5.3.Final'
		annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	}
}